@@ -200,7 +200,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
     private DataSet findOne(Map<String, Object> inParams, List<DataSet> data) {
         List<String> filters = (List<String>) inParams.get("filters");
         if (filters == null)
-            filters = inParams.keySet().stream().map(k -> k + " :eq :" + k).collect(Collectors.toList());
+            filters = inParams.keySet().stream().map(k -> k + " :eq :" + k).toList();
         List<DataSet> modifiableData = new ArrayList<>(data);
         modifiableData = filter(filters, inParams, modifiableData);
         return modifiableData.isEmpty() ? null : modifiableData.get(0);
@@ -258,7 +258,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
         List<DataSet> elements = modifiableData.stream()
                 .filter(buildListPredicate(getPrimaryKeyType(invocation), getPrimaryKey(invocation),
                         getPrimaryKeys(invocation), inParams))
-                .collect(Collectors.toList());
+                .toList();
         Map<String, Object> fields = new HashMap<>(inParams);
         fields.remove(getPrimaryKeys(invocation));
         for (DataSet element : elements) {
@@ -365,7 +365,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
             data = data
                     .stream()
                     .limit(limit + offset)
-                    .skip(offset).collect(Collectors.toList());
+                    .skip(offset).toList();
         }
         return data;
     }
@@ -374,7 +374,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
         if (filters == null || filters.isEmpty()) {
             if (inParams != null && inParams.containsKey("id")) {
                 String id = "" + inParams.get("id");
-                data = data.stream().filter(m -> m.getId().equals(id)).collect(Collectors.toList());
+                data = data.stream().filter(m -> m.getId().equals(id)).toList();
             }
             return data;
         }
@@ -435,7 +435,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                             return ((Long) numberField.longValue()).equals(numberPattern.longValue());
                         return m.get(field).toString().equals(pattern.toString());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -451,7 +451,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                             return !((Long) numberField.longValue()).equals(numberPattern.longValue());
                         return !m.get(field).toString().equals(pattern.toString());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -466,7 +466,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                         return m.get(field).toString().toLowerCase()
                                 .contains(pattern.toString().toLowerCase());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -502,7 +502,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                         }
                         return false;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -534,7 +534,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                         }
                         return !patterns.contains(m.get(field).toString());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -552,7 +552,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                             return false;
                         return m.getList(splittedField.get(0)).containsAll(patterns);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         String indexedField = splittedField.remove(splittedField.size() - 1);
         String parentField = String.join(".", splittedField);
@@ -565,10 +565,10 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                             .stream()
                             .filter(DataSet.class::isInstance)
                             .map(d -> ((DataSet) d).get(indexedField))
-                            .collect(Collectors.toList());
+                            .toList();
                     return mappedData.containsAll(patterns);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<DataSet> lessFilterData(String field, Object pattern, List<DataSet> data) {
@@ -591,7 +591,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                         }
                         return m.get(field).toString().compareTo(pattern.toString()) < 0;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -616,7 +616,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                         }
                         return m.get(field).toString().compareTo(pattern.toString()) > 0;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
@@ -624,14 +624,14 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
     private List<DataSet> isNullFilterData(String field, List<DataSet> data) {
         return data.stream()
                 .filter(m -> m.containsKey(field) && m.get(field) == null)
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     private List<DataSet> isNotNullFilterData(String field, List<DataSet> data) {
         return data.stream()
                 .filter(m -> m.containsKey(field) && m.get(field) != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<DataSet> eqOrIsNullFilterData(String field, Object pattern, List<DataSet> data) {
@@ -645,7 +645,7 @@ public class TestDataProviderEngine implements MapInvocationEngine<N2oTestDataPr
                             return ((Long) fieldNumber.longValue()).equals(patternNumber.longValue());
                         return m.get(field).toString().equals(pattern.toString());
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return data;
     }
