@@ -2,15 +2,15 @@ package net.n2oapp.properties;
 
 import org.springframework.core.env.*;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Properties;
 import java.util.function.Function;
 import java.util.regex.Pattern;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
- *
  * Convenient typed static access to the properties.
  */
 public class StaticProperties {
@@ -88,9 +88,8 @@ public class StaticProperties {
         String value = get(key);
         if (value == null)
             return emptyList();
-        return Arrays.asList(value.split(Pattern.quote(separator))).stream().map(String::trim).map(mapper).collect(toList());
+        return Arrays.stream(value.split(Pattern.quote(separator))).map(String::trim).map(mapper).toList();
     }
-
 
     public static boolean isEnabled(String key) {
         if (!key.endsWith(".enabled")) throw new IllegalArgumentException("enabled-property must end with '.enabled'");
